# Basic-OpenGL-renderer

./: CMakeLists.txt
res/shaders/: Basic.glsl
src/: Application.cpp  ElementBuffer.cpp  ElementBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  glad.c  main.cpp
